--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kyxadious.letreiro"
-    android:versionCode="101"
-    android:versionName="1.0.1" >
+    android:versionCode="102"
+    android:versionName="1.0.2" >
 
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -24,14 +25,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-        <activity android:name="com.google.ads.AdActivity"
-              android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
-        
+        <activity
+            android:name="com.google.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
         <activity
             android:name="com.kyxadious.letreiro.LetreiroActivity"
             android:label="@string/title_activity_letreiro"
             android:screenOrientation="landscape" >
+        </activity>
+        <activity
+            android:name="com.kyxadious.letreiro.SobreActivity"
+            android:label="@string/title_activity_sobre" >
         </activity>
     </application>
 
