--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.kyxadious.letreiro"
-    android:versionCode="104"
-    android:versionName="1.0.4" >
+    package="com.kyxadious.qx.letreiro"
+    android:versionCode="105"
+    android:versionName="1.0.5" >
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -16,9 +16,14 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+        <!-- Activity don't restart on rotation android -->
+        <!-- android:configChanges="keyboardHidden|orientation|screenSize" -->
+        
         <activity
-            android:name="com.kyxadious.letreiro.MainActivity"
-            android:label="@string/app_name" >
+            android:name="com.kyxadious.qx.letreiro.MainActivity"
+            android:label="@string/app_name"
+            android:configChanges="keyboardHidden|orientation|screenSize" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,20 +31,22 @@
             </intent-filter>
         </activity>
 
+        <!-- Google Play Services -->
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
+        <!-- AdMob -->
         <activity
             android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
         <activity
-            android:name="com.kyxadious.letreiro.LetreiroActivity"
+            android:name="com.kyxadious.qx.letreiro.LetreiroActivity"
             android:label="@string/title_activity_letreiro"
             android:screenOrientation="landscape" >
         </activity>
         <activity
-            android:name="com.kyxadious.letreiro.SobreActivity"
+            android:name="com.kyxadious.qx.letreiro.SobreActivity"
             android:label="@string/title_activity_sobre" >
         </activity>
     </application>
